# chess_project

./: .gitignore  LICENSE  MANIFEST.in  README.md  alpha_beta.py  board.py  chess.db  chess_logic.py  chess_timer.py  class_diagram.puml  database.py  game_controller.py  kivy_main.py  main.py  move.py  pieces.py  pyproject.toml  requirements.txt  sequence_diagram.puml
GUI/: gui.py  kivy_main.py
pieces/: KIVY_ARCHITECTURE.md
scripts/: game.py  game_controller.py
src/chess_project/: __init__.py  board.py  chess_logic.py  game_controller.py  kivy_main.py  main.py  move.py
src/chess_project.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/chess_project/ui/: __init__.py  board_widgets.py  popups.py
tests/: __init__.py  test_board.py  test_chess_logic.py  test_database.py  test_engine.py  test_game_controller_moves.py  test_move.py  test_move_timing.py  test_pieces.py
ui/: __init__.py  popups.py  screens.py
utils/: evaluation.py  hash_utils.py  move_ordering.py
