[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chess-project"
version = "1.0.0"
description = "A Schachspiel implementation with Kivy UI"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"
authors = [
    {name = "Felix Probstfeld", email = "fprobstfeld@hs-koblenz.de"},
]
maintainers = [
    {name = "Your Name", email = "your.email@example.com"},
]
keywords = ["chess", "game", "kivy", "schach"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Games/Entertainment :: Board Games",
]
dependencies = [
    "numpy>=1.24",
    "kivy>=2.3.1",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
]
dev = [
    "pytest>=7.0",
    "flake8",
]

[project.scripts]
chess = "chess_project.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
chess_project = ["pieces/*.png"]
